<resources>
    <string name="app_name">contact</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_telepon">No.Telepon</string>
    <string name="nama">Nama</string>
    <string name="search">search</string>
    <string name="number">Number :</string>
    <string name="name">Name :</string>
    <string name="delete">Delete</string>
    <string name="clear_search">Clear Search</string>
    <string name="create">Create</string>
    <string name="update">update</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="cam">CAM</string>
    <string name="take_pic">take pic</string>
</resources>