<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nama"
        tools:showIn="@layout/content_main" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nama_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_telepon"
        tools:showIn="@layout/content_main" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/telp_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/open_cam"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#59CAEC"
        android:text="@string/cam" />
</LinearLayout>